Closed Bug 1628817 Opened 6 years ago Closed 6 years ago

Unblock NVIDIA driver 26.21.14.4575 for hardware acceleration

Categories

(Core :: Graphics: WebRender, defect, P2)

76 Branch
Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox75 --- unaffected
firefox76 --- fixed
firefox77 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

Attachments

(1 file)

As it turns out, the NVIDIA driver 26.21.14.4575 was not the problem, and it appears to be related to laptops and dual GPUs. We should unblock the driver for hardware acceleration so these users can continue to get optimal performance.

This reverts the patch landed in bug 1625857. As it turns out, the
driver version is less significant than the fact that it is a laptop
with dual GPUs. We should continue to give users with this driver
hardware acceleration for optimal performance.

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ca0bf109cb26 Revert blocking of all features with NVIDIA driver version 26.21.14.4575. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

I'm on 445.75 and the Firefox Beta and am still seeing this behaviour. How often does the blacklist update, or do I need to wait for a new build?

Decision Log
HW_COMPOSITING	
force_enabled by user: Force-enabled by pref
D3D11_COMPOSITING	
Blocklisted; failure code BLOCKLIST_NVIDIA driver != 26.21.14.4575
DIRECT2D	
unavailable by default: Direct2D requires Direct3D 11 compositing
D3D11_HW_ANGLE	
unavailable by default: D3D11 compositing is disabled
disabled by env: D3D11 compositing is disabled
GPU_PROCESS	
Blocklisted; failure code BLOCKLIST_NVIDIA driver != 26.21.14.4575
WEBRENDER	
opt-in by default: WebRender is an opt-in feature
unavailable-no-angle by runtime: ANGLE is disabled
WEBRENDER_QUALIFIED	
blacklisted by env: No qualified hardware
WEBRENDER_COMPOSITOR	
unavailable by env: No DirectComposition usage
WEBGPU	
disabled by default: Disabled by default

EDIT: Ignore me. I misread the blocklist error messages (they should probably show 'version == x' to make it clear what the failure condition is)

(In reply to Jonathan Guerin from comment #6)

I'm on 445.75 and the Firefox Beta and am still seeing this behaviour. How often does the blacklist update, or do I need to wait for a new build?

Decision Log
HW_COMPOSITING	
force_enabled by user: Force-enabled by pref
D3D11_COMPOSITING	
Blocklisted; failure code BLOCKLIST_NVIDIA driver != 26.21.14.4575
DIRECT2D	
unavailable by default: Direct2D requires Direct3D 11 compositing
D3D11_HW_ANGLE	
unavailable by default: D3D11 compositing is disabled
disabled by env: D3D11 compositing is disabled
GPU_PROCESS	
Blocklisted; failure code BLOCKLIST_NVIDIA driver != 26.21.14.4575
WEBRENDER	
opt-in by default: WebRender is an opt-in feature
unavailable-no-angle by runtime: ANGLE is disabled
WEBRENDER_QUALIFIED	
blacklisted by env: No qualified hardware
WEBRENDER_COMPOSITOR	
unavailable by env: No DirectComposition usage
WEBGPU	
disabled by default: Disabled by default

This still needs to be uplifted to beta.

The patch landed in nightly and beta is affected.
:aosmond, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(aosmond)

Comment on attachment 9139565 [details]
Bug 1628817 - Revert blocking of all features with NVIDIA driver version 26.21.14.4575.

Beta/Release Uplift Approval Request

  • User impact if declined: Users will not get WebRender when they should have.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We were wrong to block the driver in the first place, it is working just fine. The problem turned out to be more related to specific hardware combinations. Very low risk we were shipping on this until very recently.
  • String changes made/needed:
Flags: needinfo?(aosmond)
Attachment #9139565 - Flags: approval-mozilla-beta?

Comment on attachment 9139565 [details]
Bug 1628817 - Revert blocking of all features with NVIDIA driver version 26.21.14.4575.

Re-enables WebRender for users on newer nVidia drivers. Approved for 76.0b5.

Attachment #9139565 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: