Bug 1628817 - Revert blocking of all features with NVIDIA driver version 26.21.14.4575. r=jrmuizel

This reverts the patch landed in bug 1625857. As it turns out, the
driver version is less significant than the fact that it is a laptop
with dual GPUs. We should continue to give users with this driver
hardware acceleration for optimal performance.

Differential Revision: https://phabricator.services.mozilla.com/D70428